# oic-helper

./: .gitignore  Config.py  README.md  main.py  oic_helper.tcss  pyproject.toml
controllers/: compare_controller.py  explore_controller.py
models/: compare_model.py  config.py  explore_model.py
oic_tools/: OICClient.py  OICHost.py  OICIntegration.py  OICPackage.py  __init__.py
report/: 2025-04-30_integration_report.md  2025-05-05_integration_report.md
ui/common/: bindings.py
ui/components/: HostCompare.py  HostNavigator.py  HostPicker.py  __init__.py
ui/screens/: CompareScreen.py  ExploreScreen.py  __init__.py  base_screen.py  compare_screen.py  explore_screen.py  screen_list.py
views/: base_view.py  compare_view.py  explore_view.py
