[project]
name = "oic-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pyside6>=6.9.0",
    "textual>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "textual-dev>=1.7.0",
]
